fix for slack not showing UP

--- a/app/assets/v2/css/base.css
+++ b/app/assets/v2/css/base.css
@@ -1272,7 +1272,7 @@ input.is-invalid {
     max-width: 90%;
   }
 
-  body.slack, body.newtoken .col-4 {
+  body.slack .slack--brand-tree, body.newtoken .col-4 {
     display: none;
   }
 
